--- a/frontend/src/Styles/Navbar.css
+++ b/frontend/src/Styles/Navbar.css
@@ -56,12 +56,13 @@
     bottom: -8px;
     left: 0;
     width: 100%;
-    height: 2px;
-    background: #0066FF;
+    height: 4px;
+    background: #006BA6;
+    border-radius: 4px;
 }
 
 .dropdown:hover span {
-    color: #0066FF;
+    color: #006BA6;
     text-shadow: 0 0 0.5px rgba(0, 102, 255, 0.3);
 }
 
@@ -385,7 +386,7 @@
     width: 900px;
     top: 100%;
     padding: 15px;
-    border-radius: 0;
+    border-radius: 12px;
     box-shadow: 0 4px 20px rgba(0, 0, 0, 0.1);
     background: white;
     z-index: 999;
