--- a/frontend/src/Styles/Navbar.css
+++ b/frontend/src/Styles/Navbar.css
@@ -35,7 +35,7 @@
 }
 
 .dropdown span {
-    color: #333;
+    color: #113262;
     font-size: 0.85rem;
     font-weight: 500;
     display: flex;
@@ -47,7 +47,7 @@
 }
 
 .dropdown.active span {
-    color: #0066FF;
+    color: #1C52A0;
 }
 
 .dropdown.active span::after {
@@ -56,21 +56,22 @@
     bottom: -8px;
     left: 0;
     width: 100%;
-    height: 4px;
-    background: #006BA6;
-    border-radius: 4px;
+    height: 3px;
+    background: #1C52A0;
+    border-radius: 2px;
 }
 
 .dropdown:hover span {
-    color: #006BA6;
-    text-shadow: 0 0 0.5px rgba(0, 102, 255, 0.3);
+    color: #1C52A0;
 }
 
 .dropdown-arrow {
-    width: 8px;
-    height: 8px;
-    transition: all 0.5s cubic-bezier(0.4, 0, 0.2, 1);
-    opacity: 0.7;
+    width: 16px;
+    height: 16px;
+    transition: transform 0.3s cubic-bezier(0.4, 0, 0.2, 1);
+    opacity: 0.8;
+    margin-top: 1px;
+    margin-left: -2px;
 }
 
 .dropdown:hover .dropdown-arrow {
